--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -4,6 +4,7 @@ Page{
 .index-page{
   height: 100%;
   background-color: #f8f8f8;
+  padding-bottom: 15px;
 }
 .index-page .cates{
   
@@ -44,10 +45,10 @@ Page{
 
 swiper{
 
-  height: 210px;
+  height:180px;
 }
 .swiper-img{
-  height: 210px;
+  height: 180px;
   width: 100%;
   
 }
@@ -71,4 +72,96 @@ input{
   flex: 1;
   background-color: #fff;
   padding: 0 15px;
+}
+.news{
+  margin-top: 30rpx;
+}
+.news .news-list{
+  background-color: #fff;
+  padding: 20px 12px;
+  border-bottom: 1rpx solid #ddd;
+  align-items: flex-start;
+  
+}
+.news .news-list:last-of-type{
+  border-bottom: none;
+}
+.news .news-list image{
+  width:200rpx;
+  height: 200rpx;
+  margin-right: 12px;
+  background-color: #ddd;
+  flex-shrink: 0;
+
+}
+.news .news-list .right{
+  flex:1;
+}
+.news .news-list .right .title{
+  overflow : hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  font-size: 16px;
+  font-weight: 600;
+  color:#000;
+}
+.news .news-list .right .desc text{
+  overflow : hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  color: #999;
+}
+
+.scroll-wrap{
+  margin-top: 30rpx;
+
+  padding: 20rpx 0;
+  background-color: #fff;
+}
+.scroll-wrap .scoll-top{
+  padding: 20rpx;
+  color: #333;
+  display: flex;
+}
+.scoll-top .m-right{
+  margin-left: auto;
+  color: pink;
+}
+.scroll-lists{
+  display: flex;
+  white-space: nowrap;
+  box-sizing: border-box;
+  
+}
+.scroll-lists .scroll-list{
+  display: inline-block;
+  width: 160rpx;
+  margin-left: 30rpx;
+
+}
+.scroll-lists .scroll-list image{
+  width: 160rpx;
+  height: 160rpx;
+  border-radius: 6px;
+}
+.scroll-lists .scroll-list .text{
+  display: inline-block;
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  color: #666;
+
+}
+.add-btn{
+  display: inline-block;
+  top: -100rpx;
+  position: relative;
+  left: 30rpx;
+  padding-right: 30rpx;
+  color: pink;
 }
