--- a/pages/send/sendData/sendData.wxss
+++ b/pages/send/sendData/sendData.wxss
@@ -32,3 +32,33 @@ Page{
   padding-top: 0;
   padding-right: 0;
 }
+.lists{
+  flex-wrap: wrap;
+}
+.img-list{
+  width: 200rpx;
+  height: 200rpx;
+  background-color: #f8f8f8;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 40rpx;
+  margin-bottom: 30rpx;
+  flex-direction: column;
+}
+.img-list text{
+  color: #666;
+  font-size: 12px;
+}
+.img-list image{
+  width: 100%;
+  height: 100%;
+}
+.img-list:nth-child(3n+1){
+  margin-left: 0;
+}
+.top-tip{
+  justify-content: space-between;
+  margin-bottom: 20rpx;
+  color: #666;
+}
