--- a/pages/reqDetail/reqDetail.wxss
+++ b/pages/reqDetail/reqDetail.wxss
@@ -12,3 +12,21 @@ swiper{
 .header{
   position: relative;
 }
+.btn-fixed{
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  z-index: 100;
+  width: 100% !important;
+  height: 96rpx;
+  line-height: 96rpx;
+  padding-top: 0;
+  padding-bottom: 0;
+  background-color: #333;
+  color: #fff;
+  border-radius: 0;
+}
+.weui-cell__ft{
+  width: 70%;
+  word-break: break-all;
+}
