--- a/pages/send/send/send.wxml
+++ b/pages/send/send/send.wxml
@@ -39,7 +39,7 @@
 	</view> -->
 
   <scroll-view class="content"  scroll-y="true" bindscrolltolower="getSendList" lower-threshold="100">
-    <view class="send-list {{index == sendList.length - 1 ? 'last':''}}" wx:for="{{sendList}}" wx:key="index">
+    <view class="send-list {{index == sendList.length - 1 ? 'last':''}}" wx:for="{{sendList}}" wx:key="index" data-id="{{item.id}}" catchtap="goDetail">
       <view class="send-top flex">
         <view class="left flex">
           <image mode="widthFix" src="{{item.user.avatar}}"></image>
@@ -56,20 +56,25 @@
         <text>{{item.description}}</text>
       </view>
 
-      <scroll-view class="images flex-view_H" scroll-x="true">
-        <image bindtap="showImg" data-index="{{idx}}" data-images="{{item.images}}"  mode="aspectFill" src="{{list}}"  wx:for-index="idx" wx:for-item="list" wx:for="{{item.images}}" wx:key="idx"></image>
-      </scroll-view>
+      <view class="images flex-view_H">
+        <image mode="aspectFill" src="{{list}}"  wx:for-index="idx" wx:for-item="list" wx:for="{{item.images}}" wx:key="idx"></image>
+      </view>
 			<view class="action flex">
 
-				<button plain class="share-btn" open-type="share">
+				<!-- <button plain class="share-btn" open-type="share">
 					<image class="w32" src="../../../image/share.png"></image>
-				</button>
+				</button> -->
 			
 				
-				<image wx-if="{{!item.appreciate.flag}}" data-item="{{item}}" data-index="{{index}}" bindtap="zan" class="w32" src="../../../image/d_zan.png"></image>
+				<image wx-if="{{!item.appreciate.flag}}" data-item="{{item}}" data-index="{{index}}" catchtap="zan" class="w32" src="../../../image/d_zan.png"></image>
 				<image wx-if="{{item.appreciate.flag}}" class="w32" src="../../../image/d_zan_HL.png"></image>
+				<text class="zan-text" wx-if="{{item.appreciate.count > 0}}">{{item.appreciate.count}}人已点赞</text>
+				<text class="delete" catchtap="delList"  data-item="{{item}}"  data-index="{{index}}" wx-if="{{openId==item.openId}}">删除</text>
 			</view>
     </view>
+		<cover-view bindtap="goSendData" class="cover">
+			<cover-image class="c-image" src="../../../image/send_HL.png"></cover-image>
+		</cover-view>
 
     <view wx:if="{{!hasMore}}" class="center">到底了哦~</view>
   </scroll-view>
