--- a/pages/send/sendDetail/sendDetail.wxss
+++ b/pages/send/sendDetail/sendDetail.wxss
@@ -57,10 +57,6 @@ page{
 .send-list{
 
   padding: 15px;
-  border-bottom: 1rpx solid #ddd;
-}
-.send-list.last{
-  border-bottom: none;
 }
 
 .send-top{
@@ -152,8 +148,14 @@ page{
   height: 100%;
   border-radius: 50%;
 }
-.delete{
-  margin-left: auto;
-  color: #1E90FF;
-  font-size: 12px;
+.text-area{
+  padding: 24rpx;
+}
+.text-area textarea{
+  
+  background-color: #f2f2f2;
+  border-radius: 12rpx;
+  height: 100rpx;
+  padding: 12rpx;
+  box-sizing: border-box;
 }
