--- a/app.wxss
+++ b/app.wxss
@@ -19,8 +19,18 @@
 .fixed-bottom-btn{
   position: fixed;
   width: 100%;
-  
-  left: 0;
+  border: none;
+
+  left: 0;  
   bottom: 0;
 
+}
+.mask{
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, .3);
+  z-index: 100;
 }
