--- a/pages/reqList/reqList.wxss
+++ b/pages/reqList/reqList.wxss
@@ -1,24 +1,53 @@
 /* pages/reqList/reqList.wxss */
 page{
   height: 100%;
+  background-color: #f5f5f5;
 
+}
+.reqs{
+  height: 100%;
+  justify-content: flex-start;
 }
 .scoll{
   height: 100%;
+  align-items: flex-start;
+}
+.cate{
+  width: 200rpx;
+  height: 100%;
+  background-color: #fff;
+  flex-shrink: 0;
+}
+.cate .list{
+  height: 96rpx;
+  line-height: 48rpx;
+  padding: 24rpx;
+  text-align: center;
+  border-bottom: 1rpx solid #eee;
+  box-sizing: border-box;
+}
+.cate .list.active{
+  background-color: #f2f2f2;
+}
+
+
+.news{
+  height: 100%;
+  flex: 1;
 }
 .news .news-list{
-  background-color: #fff;
   padding: 20px 12px;
   border-bottom: 1rpx solid #ddd;
   align-items: flex-start;
+  box-sizing: border-box;
   
 }
 .news .news-list:last-of-type{
   border-bottom: none;
 }
 .news .news-list image{
-  width:200rpx;
-  height: 200rpx;
+  width:160rpx;
+  height: 160rpx;
   margin-right: 12px;
   background-color: #ddd;
   flex-shrink: 0;
@@ -38,6 +67,9 @@ page{
   color:#000;
 }
 .news .news-list .right .desc text{
+  display: inline-block;
+  width: 340rpx;
+  white-space: normal;
   overflow : hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
