--- a/pages/send/sendDetail/sendDetail.wxss
+++ b/pages/send/sendDetail/sendDetail.wxss
@@ -51,9 +51,6 @@ page{
   color: #000;
 }
 
-.content{
-  height: calc(100% - 100rpx);
-}
 .send-list{
 
   padding: 15px;
@@ -158,4 +155,46 @@ page{
   height: 100rpx;
   padding: 12rpx;
   box-sizing: border-box;
+}
+
+.mask-content{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+.mask-content textarea{
+  background-color: #fff;
+  height: 200rpx;
+  padding: 12rpx;
+  box-sizing: border-box;
+}
+
+.comments{
+  margin-top: 10px;
+  padding: 0 20rpx;
+}
+.comments .content-list{
+  padding-bottom: 20rpx;
+}
+.comments .content-list image{
+  width: 64rpx;
+  height: 64rpx;
+  border-radius: 50%;
+}
+
+.comments .nick-name{
+  margin-left: 20rpx;
+  color: #666;
+}
+.comments .content-list .content{
+  text-indent: 20rpx;
+  color: #333;
+  margin-top: 20rpx;
+}
+.delete{
+  color: #1E90FF;
+  font-size: 12px;
+  padding-left: 20rpx;
+  margin-top: 12rpx;
 }
