--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -115,6 +115,11 @@ input{
   -webkit-box-orient: vertical;
   color: #999;
 }
+.header-title{
+  padding-left:20rpx;
+  color: #333;
+  font-weight: bold;
+}
 
 .scroll-wrap{
   margin-top: 30rpx;
@@ -165,4 +170,21 @@ input{
   left: 30rpx;
   padding-right: 30rpx;
   color: pink;
+}
+.gray-line{
+  height: 30rpx;
+  background-color: #f8f8f8;
+}
+
+.cover{
+  width: 100rpx;
+  height: 100rpx;
+  position: fixed;
+  right: 40rpx;
+  bottom: 100rpx;
+}
+.cover .c-image{
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
 }
