--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -10,6 +10,12 @@
   overflow: hidden;
   margin-right: 24rpx;
 }
+.img image{
+  width: 128rpx;
+  height: 128rpx;
+  border-radius: 50% !important;
+  margin-right: 24rpx;
+}
 .name{
   font-weight: bold;
   font-size: 32rpx;
@@ -17,4 +23,12 @@
 .auto{
   width: 100%;
   height: 100%;
+}
+.point{
+  color:#666;
+  text-align: center;
+  padding-bottom: 30px;
+}
+.point .text2{
+  color: #333;
 }
